# harness-mono

./: .dockerignore  .env.example  .env.production  .gitignore  CLAUDE.md  Makefile  README.md  REQUIREMENTS.md  apprunner.yaml  docker-compose.yml  pyproject.toml  source-config.json  terraform.tfvars
.github/workflows/: deploy.yml
admin-frontend/: Dockerfile  README.md  apprunner.yaml  deploy.sh  index.html  nginx.conf  package-lock.json  package.json  server.js
admin-frontend/public/: monitoring.js
admin-frontend/src/: App.css  App.tsx
admin-frontend/src/components/: Layout.tsx  ProtectedRoute.tsx
admin-frontend/src/pages/: Costs.tsx  Dashboard.tsx  Evaluation.tsx  Login.tsx  Models.tsx  Papers.tsx  System.tsx
backend/: .env.example
backend/api/: config.py  main.py
backend/api/middleware/: __init__.py  admin_auth.py  logging.py  rate_limit.py  request_id.py
backend/api/routers/: admin.py  ask.py  auth.py  health.py
backend/services/: admin.py  cache.py  cost_explorer.py  vector_db.py
backend/utils/: logging.py  s3.py
data-pipeline/configs/: data_sources_auth_guide.md
data-pipeline/dags/: veterinary_corpus_acquisition.py
data-pipeline/evaluation/: navle_question_bank.json  veterinary_benchmarks.py
data-pipeline/scripts/: train_medgemma_vet.py
docs/: COST_MANAGEMENT.md  DEPLOYMENT.md  DOMAIN_SETUP.md  OPTIMIZED_DEPLOYMENT.md
infrastructure/: terraform-outputs.json
infrastructure/docker/: Dockerfile.backend  Dockerfile.backend.optimized  init-db.sql
infrastructure/iam/: harness-app-user-policy.json
infrastructure/sagemaker/: README.md  deploy_medgemma.py  requirements.txt
infrastructure/terraform/: README.md  admin_frontend.tf  apprunner-service-config.json  apprunner-simple.tf  apprunner.tf  codebuild.tf  costs.tf  data_pipeline.tf  database.tf  dns.tf  ecs_api.tf  main.tf  ml_training.tf  networking.tf  outputs.tf  sagemaker.tf  storage.tf  terraform.tfvars  tfplan  variables.tf
local-training/: .env.example  Dockerfile  README.md  requirements.txt
local-training/config/: training_config.json
local-training/scripts/: run_inference_server.py  run_training.py  test_s3_connection.py
local-training/src/: __init__.py  inference_server.py
local-training/tests/: __init__.py  test_inference_server.py  test_local_trainer.py  test_s3_streaming.py
scripts/: check-aws-quotas.sh  cleanup-spot-instances.sh  deploy_admin_apprunner.sh  deploy_apprunner.sh  set_terraform_vars.sh  tail-admin-logs.sh
scripts/deployment/: README.md  deploy.sh  fast-build.sh  run_evaluation.sh  start_training.sh
(+22 files in other folders)
